--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,8 +4,7 @@ trigger:
   - master
 
 pool:
-  #vmImage: 'ubuntu-latest'  # You can use 'windows-latest' if preferred
-name: 'DESKTOP-U6UTH74'
+name: Default
 variables:
   # Define any additional variables here
   NODE_VERSION: '18.x'  # Specify the Node.js version you need
