azure yaaml added

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,13 @@ steps:
     inputs:
       versionSpec: '$(NODE_VERSION)'
     displayName: 'Install Node.js'
+    
+    - task: PublishJUnitResults@2
+    inputs:
+      testResultsFiles: '**/reports/junit/*.xml'
+      testRunTitle: 'WebdriverIO JUnit Tests'
+    condition: succeededOrFailed()
+    displayName: 'Publish Test Results'
 
   - script: |
       npm install
