--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@wdio/appium-service": "^9.2.1",
     "@wdio/browserstack-service": "^9.2.8",
     "@wdio/cli": "^9.1.2",
+    "@wdio/junit-reporter": "^9.2.2",
     "@wdio/local-runner": "^9.1.2",
     "@wdio/mocha-framework": "^9.1.2",
     "@wdio/spec-reporter": "^9.1.3",
